syntax = "proto3";

package org.project_planton.credential.v1;

import "google/protobuf/timestamp.proto";
import "org/project_planton/app/credential/v1/api.proto";

// Request message for creating a credential.
message CreateCredentialRequest {
  // Name of the credential.
  string name = 1;

  // Provider type (gcp, aws, azure).
  Credential.CredentialProvider provider = 2;

  CredentialProviderConfig provider_config = 3;
}

// Response message for creating a credential.
message CreateCredentialResponse {
  // Created credential.
  Credential credential = 1;
}

// Request message for listing credentials.
message ListCredentialsRequest {
  // Optional filter by provider (gcp, aws, azure).
  Credential.CredentialProvider provider = 1;
}

// Response message for listing credentials.
message ListCredentialsResponse {
  // List of credentials (without sensitive data).
  repeated CredentialSummary credentials = 1;
}

// Credential summary (without sensitive credential data).
message CredentialSummary {
  // Unique identifier.
  string id = 1;
  // Name of the credential.
  string name = 2;
  // Provider type.
  Credential.CredentialProvider provider = 3;
  // Creation timestamp.
  google.protobuf.Timestamp created_at = 4;
  // Last update timestamp.
  google.protobuf.Timestamp updated_at = 5;
}

// Request message for getting a credential by ID.
message GetCredentialRequest {
  // The unique identifier of the credential.
  string id = 1;
}

// Response message containing the retrieved credential.
message GetCredentialResponse {
  // The requested credential.
  Credential credential = 1;
}

// Request message for updating a credential.
message UpdateCredentialRequest {
  // The unique identifier of the credential to update.
  string id = 1;
  // Name of the credential.
  string name = 2;
  // Provider type (must match existing credential).
  Credential.CredentialProvider provider = 3;

  // Provider-specific credential data.
  CredentialProviderConfig provider_config = 4;
}

// Response message containing the updated credential.
message UpdateCredentialResponse {
  // The updated credential.
  Credential credential = 1;
}

// Request message for deleting a credential.
message DeleteCredentialRequest {
  // The unique identifier of the credential to delete.
  string id = 1;
}

// Response message for delete operation.
message DeleteCredentialResponse {
  // Success status message.
  string message = 1;
}
