syntax = "proto3";

package org.project_planton.credential.v1;

import "org/project_planton/app/credential/v1/io.proto";

// CredentialQueryController provides operations for managing cloud provider credentials.
service CredentialQueryController {
  // ListCredentials lists all credentials with provider filter.
  rpc List(ListCredentialsRequest) returns (ListCredentialsResponse);

  // GetCredential retrieves a credential by ID.
  rpc Get(GetCredentialRequest) returns (GetCredentialResponse);
}
